RESOLVED FIXED43884
[GTK] Geolocation policy decision object leaking
https://bugs.webkit.org/show_bug.cgi?id=43884
Summary [GTK] Geolocation policy decision object leaking
Gustavo Noronha (kov)
Reported 2010-08-11 15:48:39 PDT
In ChromeClient::requestGeolocationPermissionForFrame, we create the policy decision object but never unref it.
Attachments
proposed fix (2.22 KB, patch)
2010-08-11 15:50 PDT, Gustavo Noronha (kov)
mrobinson: review+
Gustavo Noronha (kov)
Comment 1 2010-08-11 15:50:43 PDT
Created attachment 64171 [details] proposed fix
Martin Robinson
Comment 2 2010-08-11 15:56:05 PDT
Comment on attachment 64171 [details] proposed fix LGTM!
Gustavo Noronha (kov)
Comment 3 2010-08-11 16:26:07 PDT
Landed as r65195.
Note You need to log in before you can comment on or make changes to this bug.