2010-08-11 Gustavo Noronha Silva <gustavo.noronha@collabora.co.uk>

Reviewed by Martin Robinson.

        [GTK] Geolocation policy decision object leaking
        https://bugs.webkit.org/show_bug.cgi?id=43884

        Use GRefPtr on the policy decision object to fix the leak.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::requestGeolocationPermissionForFrame):

Canonical link: https://commits.webkit.org/55995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65195 268f45cc-cd09-0410-ab3c-d52691b4dbfc